fix: restore workflow trigger and implement pandoc for robust markdown parsing

--- a/.github/workflows/update-site.yml
+++ b/.github/workflows/update-site.yml
@@ -17,8 +17,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # THIS IS THE MISSING PIECE
-      - name: Install Pandoc (System Binary)
+      - name: Install Pandoc
         run: sudo apt-get update && sudo apt-get install -y pandoc
 
       - name: Setup Python
