--- a/.github/workflows/update-site.yml
+++ b/.github/workflows/update-site.yml
@@ -1,20 +1,27 @@
-name: Update Website
+name: Build and Deploy Site
 
 on:
+  push:
+    branches: ["main"]
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
-  workflow_dispatch: 
-  push:
-    branches:
-      - main
+
+# Grant permission to modify the website directly
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Install Pandoc
@@ -28,14 +35,23 @@ jobs:
       - name: Install Dependencies
         run: pip install -r requirements.txt
 
-      - name: Run Builder
+      - name: Build Site
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python build.py
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          publish_branch: gh-pages
+          path: './public'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
